RESOLVED FIXED275677
[Site Isolation] Fix `_updateWebpagePreferences`
https://bugs.webkit.org/show_bug.cgi?id=275677
Summary [Site Isolation] Fix `_updateWebpagePreferences`
Charlie Wolfe
Reported 2024-06-19 23:43:33 PDT
Send the `UpdateWebsitePolicies` message to all web processes. If the main frame is out-of-process, apply website policies on its remote frame client.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-19 23:43:45 PDT
Charlie Wolfe
Comment 2 2024-06-19 23:44:30 PDT
EWS
Comment 3 2024-06-20 13:03:32 PDT
Committed 280213@main (5c8777b62874): <https://commits.webkit.org/280213@main> Reviewed commits have been landed. Closing PR #29993 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.