[Site Isolation] Fix `_updateWebpagePreferences` https://bugs.webkit.org/show_bug.cgi?id=275677 rdar://130186550

Reviewed by Sihui Liu and Alex Christensen.

Send the `UpdateWebsitePolicies` message to all web processes. If the main frame is out-of-process, apply
website policies on its remote frame client.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updateWebsitePolicies):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateWebsitePolicies):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, UpdateWebpagePreferences)):

Canonical link: https://commits.webkit.org/280213@main